# amigo_ed_tutorials

./: CMakeLists.txt  README.md  package.xml
config/ed/: segmentation.yaml
config/rviz/: amigo_ed.rviz
launch/: amigo_ed.launch
scripts/: teleop.py
scripts/simulator/: spawn_objects_robotics_testlabs.py
setup/: setup.bash
